[package]
name = "maf"
version = "0.1.0"
edition = "2021"
authors = ["zhk zzzhekii@gmail.com"]

[lib]
name = "maf"
path = "src/lib.rs"

[[bin]]
name = "mafar"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
